--- a/css/home.css
+++ b/css/home.css
@@ -147,7 +147,7 @@
     color: black;
     padding-left: 5px;
 }
-.button__Create__Modify__User{
+.button__User{
     width: 100%;
     height: 70px;
     display: flex;
@@ -156,7 +156,7 @@
     align-items: center;
     background-color: rgba(0, 0, 0, 0.7);
 }
-.button__Create__Modify__User button{
+.button__User button{
     height: 40px;
     width: 100px;
     color: white;
@@ -245,6 +245,7 @@
     width: 200px;
     color: black;
     padding: 10px;
+    text-align: center;
     text-decoration: none;
     border-right: 1px solid black;
 }
@@ -252,6 +253,7 @@
     width: 200px;
     color: black;
     padding: 10px;
+    text-align: center;
     text-decoration: none;
     border-left: 1px solid black;
 }
