--- a/css/user.css
+++ b/css/user.css
@@ -6,34 +6,31 @@
     justify-content: center;
     align-items: center;
     align-self: flex-start;
-    border: 1px ridge rgba(165, 42, 42, 0.5);
-    background-color: rgba(247, 169, 81, 0.555);
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
-    border-radius: 7px 7px 7px 7px;
-    box-shadow: outset 1px 1px 1px 1px rgba(247, 169, 81, 0.555);
+    background-color: rgba(0, 0, 0, 0.5);
+    border-bottom-right-radius: 8px;
     font-size: 20px;
-    color: black;
+    color: white;
 }
 .back__user__button:hover{
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: bold;
+    font-size: 22px;
 }
 /*_____Data User______*/
 .agend__user__data__personal__container{
-    border: 1px solid rgba(128, 255, 0, 0.4);
-    background-color: rgba(156, 205, 50, 0.4);
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
     align-content: center;
     align-items: center;
-    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 .agend__user__data__personal{
     width: 100%;
-    margin: 7%;
+    margin-bottom: 20px;
     padding: 5px;
     overflow: scroll;
     display: flex;
@@ -43,48 +40,62 @@
 }
 .agend__user__data__personal__photo{
     width: 400px;
-    height: 400px;
+    height: 300px;
     display: flex;
     flex-direction: row;
     align-self: center;
 }
+.agend__user__data__personal__name{
+    height: 100px;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
+    font-size: 40px;
+}
 .agend__user__data__personal__photo img{
     width: 400px;
-    height: 400px;
+    height: 300px;
     object-fit: contain;
     border-radius: 50%;
-    border: 1px ridge rgba(165, 42, 42, 0.5);
+    border: 2px solid white;
     background-color: white;
 }
 .agend__user__data__personal__information{
     width: 90%;
-    height: 140px;
-    border: 1px ridge rgba(165, 42, 42, 0.5);
-    background-color: rgba(247, 169, 81, 0.555);
-    margin:20px;
+    border: 2px solid white;
 }
 .agend__user__data__personal__information p{
     margin-left: 20px;
 }
 .agend__user__data__personal__information--title{
-    margin-left: 20px;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-flow: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 20px;
+    background-color: white;
 }
 /*____Favourite Giphh and Marvel_____*/
 .agend__user__favourite__container{
-    border: 1px solid rgba(128, 255, 0, 0.4);
-    background-color: rgba(156, 205, 50, 0.4);
+    width: 100%;
     display: flex;
-    flex-flow: column nowrap;
-    padding: 10px;
+    flex-flow: row wrap;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 .agend__user__favourite--title{
     width: 100%;
     height: 50px;
     display: flex;
+    color: white;
     justify-content: center;
     align-items: center;
-    border: 1px ridge rgba(165, 42, 42, 0.5);
-    background-color: rgba(247, 169, 81, 0.555);
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 .agend__user__favourite__parent{
     width: 100%;
@@ -93,8 +104,6 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    border: 1px ridge rgba(165, 42, 42, 0.5);
-    background-color: rgba(247, 169, 81, 0.555);
 }
 .agend__user__favourite{
     margin: 10px;
