--- a/views/user.html
+++ b/views/user.html
@@ -5,10 +5,10 @@
                 <a class="back__user__button" href="#!/">Back</a>
                 <div class="agend__user__data__personal">
                     <div class="agend__user__data__personal__photo"><img ng-src="{{userCtrl.user.photo}}" onerror="this.src='/img/no_image.png'"></div>
+                    <div class="agend__user__data__personal__name">{{userCtrl.user.name}}</div>
                     <div class="agend__user__data__personal__information">
                         <h3 class="agend__user__data__personal__information--title"><b>Datos Personales</b></h3>
-                        <p>Name: {{userCtrl.user.name}} <br>
-                        Phone: {{userCtrl.user.phone}} <br>
+                        <p>Phone: {{userCtrl.user.phone}} <br>
                         Email: {{userCtrl.user.email}}</p>
                     </div>
                 </div>
