las fotos se deben ver correctamente

--- a/css/home.css
+++ b/css/home.css
@@ -200,7 +200,7 @@
 .view__favourite__photo{
     width: 150px;
     height: 150px;
-    object-fit: cover;
+    object-fit: contain;
 }
 .user__search{
     width: 100%;
