se ha realizado el algoritmo para hacer que las flechas aparezcan y desaparezcan cuando sea oportuno a la hora de pasar página en las busquedas de los Giphy o Marvel

--- a/css/home.css
+++ b/css/home.css
@@ -278,7 +278,7 @@
     align-items: center;
     background-color: white;
     border-radius: 5px 5px 5px 5px;
-    justify-content: space-between;
+    justify-content: center;
 }
 .type__change--left{
     width: 10%;
