--- a/views/home.html
+++ b/views/home.html
@@ -36,18 +36,7 @@
                     </ul>
                 </div>
                 <!-- Container User Perfil -->
-                <div class="view__container" ng-show="HomeCtrl.showView == 'User'" ng-model-options="{allowInvalid: true, debounce: 200}" ng-cloak>
-                    <form name="HomeCtrl.formUser" class="newUser__form" ng-model="HomeCtrl.formUser" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                        <h3>Name: </h3>
-                        <input type="text" placeholder="Name user" ng-required="true" ng-model="HomeCtrl.user.name" ng-minlength="3" ng-maxlength="10" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                        <h3>E-mail: </h3>
-                        <input type="email" placeholder="Email user" ng-required="true" ng-model="HomeCtrl.user.email" ng-maxlength="25" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                        <h3>Phone: </h3>
-                        <input type="number" placeholder="Phone user" ng-required="true" ng-model="HomeCtrl.user.phone" ng-minlength="9" ng-maxlength="9" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                        <h3>Photo: </h3>
-                        <input type="text" placeholder="Photo user" ng-required="true" ng-model="HomeCtrl.user.photo" ng-minlength="5" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                    </form>
-                </div>
+                <personal-form ng-show="HomeCtrl.showView == 'User'" user="HomeCtrl.user" form="HomeCtrl.formUser"></personal-form>
                 <!-- Container Gifs -->
                 <div class="view__container__favourite" ng-show="HomeCtrl.showView == 'Giphy'">
                     <div class="view__favourite__container">
@@ -63,17 +52,17 @@
                             <a class="user__search__type__recent" ng-class="{blackStyle:(HomeCtrl.typeGiphy=='search')}" ng-click="HomeCtrl.typeGiphy='search'">Recents</a>
                             <a class="user__search__type__trending" ng-class="{blackStyle:(HomeCtrl.typeGiphy=='trending')}" ng-click="HomeCtrl.typeGiphy='trending'">Trending</a>
                         </div>
-                        <button ng-disabled="HomeCtrl.formSG.$invalid" ng-click="HomeCtrl.getTypesUser('Giphy',false)" ng-class="{borderGreenStyle:HomeCtrl.formSG.$valid}">Search Giphy</button>
+                        <button ng-disabled="HomeCtrl.formSG.$invalid" ng-click="HomeCtrl.getTypesUser('Giphy','no')" ng-class="{borderGreenStyle:HomeCtrl.formSG.$valid}">Search Giphy</button>
                     </div>
-                    <div class="view__container--general">
-                        <div ng-hide="HomeCtrl.ArrowLeft" class="type__change--left" ng-click="HomeCtrl.getTypesUser('Giphy',true, false)"><img src="/img/flecha-left.png"></div>
-                        <div class="view__type__container">
-                            <div class="view__type__gifs" ng-repeat="giphy in HomeCtrl.giphyList track by giphy.id">
-                                <img class="views__photo__gifs" ng-class="{borderBlackStyle:HomeCtrl.checkTypeUser('Giphy',giphy.id)}" ng-click="HomeCtrl.addTypeFav('Giphy',giphy)" ng-src="{{giphy.photo}}" onerror="this.src='/img/no_image.png'">
-                            </div>
-                        </div>
-                        <div ng-hide="HomeCtrl.ArrowRight" class="type__change--right" ng-click="HomeCtrl.getTypesUser('Giphy',true, true)"><img src="../img/flecha-right.png"></div>
-                    </div>
+                    <slider-gifs 
+                        style="width:100%; height:400px"
+                        gifs='HomeCtrl.giphyList' 
+                        arrow-left='HomeCtrl.ArrowLeft'
+                        arrow-right='HomeCtrl.ArrowRight'
+                        get-gifs='HomeCtrl.getTypesUser(type,offset,direction)'
+                        check-gif='HomeCtrl.checkTypeUser(type,id)'
+                        add-gif-fav="HomeCtrl.addTypeFav(type,data)">
+                    </slider-gifs>
                 </div>
                 <!-- Container Marvel -->
                 <div class="view__container__favourite" ng-show="HomeCtrl.showView == 'Marvel'" ng-hide="HomeCtrl.showView != 2">
@@ -90,17 +79,17 @@
                                 <option ng-repeat="marvel in HomeCtrl.marvelListSelect track by $index">{{marvel}}</option>
                             </select>
                         </form>
-                        <button ng-disabled="HomeCtrl.formSM.$invalid" ng-click="HomeCtrl.getTypesUser('Marvel',false)" ng-class="{borderGreenStyle:HomeCtrl.formSM.$valid}">Search Marvel</button>
+                        <button ng-disabled="HomeCtrl.formSM.$invalid" ng-click="HomeCtrl.getTypesUser('Marvel','no')" ng-class="{borderGreenStyle:HomeCtrl.formSM.$valid}">Search Marvel</button>
                     </div>
-                    <div class="view__container--general">
-                        <div ng-hide="HomeCtrl.ArrowLeft" class="type__change--left" ng-click="HomeCtrl.getTypesUser('Marvel',true,false)"><img src="/img/flecha-left.png"></div>
-                        <div class="view__type__container">
-                            <div class="view__type__marvel" ng-repeat="marvel in HomeCtrl.marvelList track by marvel.id">
-                                <img class="views__photo__marvel" ng-class="{borderBlackStyle:HomeCtrl.checkTypeUser('Marvel',marvel.id)}" ng-click="HomeCtrl.addTypeFav('Marvel',marvel)" ng-src="{{marvel.photo}}" onerror="this.src='/img/no_image.png'">
-                            </div>
-                        </div>
-                        <div ng-hide="HomeCtrl.ArrowRight" class="type__change--right" ng-click="HomeCtrl.getTypesUser('Marvel',true,true)"><img src="../img/flecha-right.png"></div>
-                    </div>
+                    <slider-marvel 
+                        style="width:100%; height:400px"
+                        marvels='HomeCtrl.marvelList' 
+                        arrow-left='HomeCtrl.ArrowLeft'
+                        arrow-right='HomeCtrl.ArrowRight'
+                        get-marvel='HomeCtrl.getTypesUser(type,offset,direction)'
+                        check-marvel='HomeCtrl.checkTypeUser(type,id)'
+                        add-marvel-fav="HomeCtrl.addTypeFav(type,data)">
+                    </slider-marvel>
                 </div>
                 <!-- Container button Create and Modify -->
                 <div class="button__User">
